footer spacing and team card mobile fixed

--- a/css/footer.css
+++ b/css/footer.css
@@ -167,6 +167,12 @@
 	.footer-distributed .footer-center i{
 		margin-left: 0;
 	}
+	.venue {
+		margin-left: -45px;
+	}
+	.phone {
+		margin-left: -30px;
+	}
 
 }
 
